--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,35 @@
 #root {
-  background-image: linear-gradient(navy, #282c34);
+  background-image: linear-gradient(#282c34, black);
 }
 
 .container {
   text-align: center;
   background: #627180;
+}
+
+.container-fluid {
+  text-align: center;
+  background: #343a40;
+}
+
+#topBar {
+  position: right;
+}
+
+ul {
+  position: right;
+  top: 0;
+  width: 100%;
+}
+
+li {
+  border: 1px solid black;
+  background-color: #f3f3f3bd;
+}
+
+li a:hover {
+  background-color: #304c68;
+  color: white;
 }
 
 .App-logo {
@@ -32,7 +57,7 @@
 }
 
 .row {
-  background: #304c68;
+  background: #1e3246;
 }
 
 .col-sm {
